--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </div>
             <div class="footer-section">
                 <h4>Contact</h4>
-                <p>123 Church Street, City, State 12345</p>
+                <p>131 Ahoada Omoku Road, Omoku 510103</p>
                 <p>Email: info@ccgmission.org</p>
                 <p>Phone: (123) 456-7890</p>
             </div>
