--- a/sabbath-school.html
+++ b/sabbath-school.html
@@ -67,14 +67,14 @@
             </div>
             <div class="footer-section">
                 <h4>Contact</h4>
-                <p>123 Church Street, City, State 12345</p>
+                <p>131 Ahoada Omoku Road, Omoku 510103</p>
                 <p>Email: info@ccgmission.org</p>
                 <p>Phone: (123) 456-7890</p>
             </div>
         </div>
         <div class="footer-bottom">
             <p>Motto: God First</p>
-            <p>&copy; 2023 Christian Church of God Mission</p>
+            <p>&copy; 2025 Christian Church of God Mission</p>
         </div>
     </footer>
 
