--- a/index.html
+++ b/index.html
@@ -4,128 +4,64 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Christian Church of God Mission</title>
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="ccg-logo.png" type="image/png">
 </head>
 <body>
 
-    <header>
-        <div class="logo">
-            <img src="ccg-logo.png" alt="CCGM Logo" class="ccg-logo">
-        </div>
-
-        <div class="menu-controls">
-            <label class="switch">
-                <input type="checkbox" id="theme-toggle">
-                <span class="slider round"></span>
-            </label>
-            <div class="hamburger-menu" id="hamburger-menu">
-                <div class="bar"></div>
-                <div class="bar"></div>
-                <div class="bar"></div>
+    <header class="hero-banner">
+        <div class="hero-content">
+            <h1>God First – Welcome to Christian Church of God Mission</h1>
+            <div class="cta-buttons">
+                <a href="#" class="cta-button live-service-btn">🔴 Watch Live</a>
+                <a href="#" class="cta-button">📖 Today’s Devotional</a>
             </div>
         </div>
-
-        <nav id="nav-menu">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="devotional.html">Devotional</a></li>
-                <li><a href="sabbath-school.html">Sabbath School</a></li>
-                <li><a href="bible.html">Bible</a></li>
-                <li><a href="hymnal.html">Hymnal</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-            </ul>
-        </nav>
     </header>
 
-    <main>
-        <section class="hero" data-aos="fade-in">
-            <div class="hero-content">
-                <h2>Welcome to Christian Church of God Mission</h2>
-                <p>A place of worship, fellowship, and growth in faith.</p>
-                <a href="#" class="cta-button">Join Us This Sabbath</a>
-            </div>
-        </section>
+    <section class="quick-access-section">
+        <div class="container">
+            <h2>Quick Access</h2>
+            <div class="card-grid">
+      <a href="devotional.html" class="card">
+    <span class="card-icon">📖</span>
+    <h3>Daily Devotional</h3>
+</a>
 
-        <section class="about-us" data-aos="fade-up">
-            <div class="container">
-                <div class="about-image">
-                    <img src="about-placeholder.jpg" alt="About Us">
-                </div>
-                <div class="about-text">
-                    <h3>Our Mission</h3>
-                    <p>Our goal is to spread the word of God and build a community rooted in love and faith. We invite you to join us for worship and fellowship, as we seek to grow together in spirit and truth.</p>
-                    <a href="contact.html" class="cta-button">Learn More</a>
-                </div>
+                <a href="#" class="card">
+                    <span class="card-icon">📘</span>
+                    <h3>Sabbath School Manual</h3>
+                </a>
+                <a href="#" class="card">
+                    <span class="card-icon">📖</span>
+                    <h3>KJV Bible</h3>
+                </a>
+                <a href="#" class="card">
+                    <span class="card-icon">🎵</span>
+                    <h3>CCG Hymnal</h3>
+                </a>
+                <a href="#" class="card">
+                    <span class="card-icon">📰</span>
+                    <h3>Blog</h3>
+                </a>
+                <a href="#" class="card">
+                    <span class="card-icon">🎧</span>
+                    <h3>Podcasts</h3>
+                </a>
+                <a href="#" class="card">
+                    <span class="card-icon">📍</span>
+                    <h3>Nearby Church Finder</h3>
+                </a>
+                <a href="#" class="card">
+                    <span class="card-icon">✉️</span>
+                    <h3>Contact</h3>
+                </a>
             </div>
-        </section>
-
-        <section class="latest-sermons" data-aos="fade-up">
-            <div class="container">
-                <h3>Latest Sermons</h3>
-                <div class="sermon-grid">
-                    <div class="sermon-card">
-                        <img src="sermon-1.jpg" alt="Sermon Image 1">
-                        <h4>God's Unfailing Love</h4>
-                        <p>A powerful message on the enduring love of our creator.</p>
-                        <a href="#" class="cta-button">Listen Now</a>
-                    </div>
-                    <div class="sermon-card">
-                        <img src="sermon-2.jpg" alt="Sermon Image 2">
-                        <h4>Living in His Grace</h4>
-                        <p>Discover how to live a life filled with grace and purpose.</p>
-                        <a href="#" class="cta-button">Listen Now</a>
-                    </div>
-                    <div class="sermon-card">
-                        <img src="sermon-3.jpg" alt="Sermon Image 3">
-                        <h4>The Power of Prayer</h4>
-                        <p>Understanding how to connect with God through prayer.</p>
-                        <a href="#" class="cta-button">Listen Now</a>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="resources-quick-links" data-aos="fade-up">
-            <div class="container">
-                <a href="devotional.html" class="resource-link">Daily Devotional</a>
-                <a href="sabbath-school.html" class="resource-link">Sabbath School Manual</a>
-                <a href="bible.html" class="resource-link">The Holy Bible</a>
-                <a href="hymnal.html" class="resource-link">Church Hymnal</a>
-            </div>
-        </section>
-    </main>
+        </div>
+    </section>
 
     <footer>
-        <div class="container footer-content">
-            <div class="footer-section">
-                <h4>About Us</h4>
-                <p>Christian Church of God Mission is dedicated to serving God and our community with love and compassion.</p>
-            </div>
-            <div class="footer-section">
-                <h4>Quick Links</h4>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
-                    <li><a href="events.html">Events</a></li>
-                    <li><a href="sermons.html">Sermons</a></li>
-                </ul>
-            </div>
-            <div class="footer-section">
-                <h4>Contact</h4>
-                <p>131 Ahoada Omoku Road, Omoku 510103</p>
-                <p>Email: info@ccgmission.org</p>
-                <p>Phone: (123) 456-7890</p>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            <p>Motto: God First</p>
-            <p>&copy; 2025 Christian Church of God Mission</p>
-        </div>
-    </footer>
+        </footer>
 
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
